--- a/docs/layouts/html5.html
+++ b/docs/layouts/html5.html
@@ -1,7 +1,7 @@
 {%- if DEV %}
   {% set baseurl = '' %}
 {% else %}
-  {% set baseurl = '/swig' %}
+  {% set baseurl = '/swiger' %}
 {% endif -%}
 <!doctype html>
 <html>
